notification bug fix and some improvements