@@ -6,6 +6,9 @@
 package todo;
 
 import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.Timer;
 import java.util.TimerTask;
 
@@ -16,6 +19,7 @@ import java.util.TimerTask;
 public class Reminder {
     private ToDoList list;
     private Timer timer;
+
     
     public Reminder(ToDoList list){
         this.list = list;
@@ -24,14 +28,22 @@ public class Reminder {
     
     public void runReminder(){
         timer.scheduleAtFixedRate(new TimerTask(){
+
         @Override
         public void run(){
             for(Entry i : list.getEntries()){
                 if(i.getSpec() instanceof Remindable){
                     Remindable entrySpec = (Remindable)i.getSpec();
-                    if(entrySpec.check(LocalDateTime.now()) && !entrySpec.isCalled()){
-                        entrySpec.call();
-                        alarm(i.getSpec().getTitle());
+                    long rate = 0;
+                    if(entrySpec instanceof TimeEntrySpec){
+                        LocalTime l = LocalTime.parse(((TimeEntrySpec)i.getSpec()).getTime(), DateTimeFormatter.ofPattern("H:m"));
+                        rate = LocalTime.now().until(l, ChronoUnit.SECONDS);
+                    }
+                    if(rate == 1800  || rate == 600 || rate == 0 && !entrySpec.isDone()){
+//                        if(entrySpec instanceof DateEntrySpec || entrySpec.check(LocalDateTime.now()) ) entrySpec.done();
+                        if(rate == 0)
+                            entrySpec.done();
+                        alert(i.getSpec().getTitle(), rate/60);
                     }
                 }
             }
@@ -40,9 +52,11 @@ public class Reminder {
         
     }
     
-    public void alarm(String title){
+    
+    public void alert(String title, long rate){
         try{
-            Runtime.getRuntime().exec("notify-send -t 1000 -u critical " + title);
+//            Runtime.getRuntime().exec("notify-send -u critical " + "\"" + " minutes left for " + title + " \"");
+            Runtime.getRuntime().exec(new String[]{"notify-send", "-u", "critical", "todo", rate + " minutes " + " until " + title});
             Runtime.getRuntime().exec("aplay " + "notification.wav");
         }catch(Exception e){}
     }
